<resources>
    <string name="app_name">integratedProject</string>
    <string name="admin">Admin</string>
    <string name="student">Student</string>
    <string name="firebase">Firebase</string>

    <string name="title_activity_student_main">StudentMainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_admin_login">AdminLoginActivity</string>
    <string name="kies_je_studentennummer_uit_de_lijst">Kies je studentennummer uit de lijst</string>
    <string name="kies_uw_studentennummer_uit_de_lijs">Kies uw studentennummer uit de lijs</string>
    <string name="examen_stoppen">Examen beëindigen</string>
    <string name="textview">TextView</string>
    <string name="save">Save</string>
    <string name="type_of_question">Type of question</string>
    <string name="multiple_choice">Multiple choice</string>
    <string name="code_correct">Code correct</string>
    <string name="open_question">Open question</string>
    <string name="add_question">Add question</string>
    <string name="import_students">Import students</string>
    <string name="save_question">Save question</string>
    <string name="snummer">snummer</string>
    <string name="answers">answers</string>
    <string name="mapview">mapview</string>
    <string name="times_left_exam">Times left exam</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="add_students">Add students</string>
    <string name="add_exam">Add exam</string>
    <string name="exam_name">Exam name</string>
    <string name="reset_password">Reset Password</string>
    <string name="this_exam_does_not_have_any_questions_yet">This exam does not have any questions yet</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="save_points">Save points</string>
    <string name="kies_het_examen_dat_je_moet_maken">Kies het examen dat je moet maken</string>
    <string name="dna">students\' answer: Student did not answer the question</string>
    <string name="edit">Edit</string>
    <string name="correct_code">\"Correct code: \"</string>
    <string name="your_code_to_correct">\"Your code to correct: \"</string>
    <string name="case_sensitive">Case sensitive?</string>
    <string name="your_question">\"Your question: \"</string>
    <string name="correct_answers">\"Correct answer(s): \"</string>
    <string name="add_option">Add option</string>
    <string name="multiple_answers">Multiple answers</string>

</resources>